--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         <li class="cabecalho-lista-item">Estudante</li>
     </ul>
    
-
 </header>
+<section class="Escola">
+<h2>sobre a Escola</h2>
+
+
+
+</section>
+
 </body>
 </html>
