--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 <section class="Escola">
 <h2 class="titulo-escola">sobre a Escola</h2>
-<p >class=<escola> A escola monteiro lobato, é uma otima escola com bons profesores, que nos ensina e dà atenção quando precisamos.</escola></p>
+<p class="texto-escola"> A escola monteiro lobato, é uma otima escola com bons profesores, que nos ensina e dà atenção quando precisamos.</escola></p>
 
 
 </section>
