--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
     </ul>
    
 </header>
+
 <section class="Escola">
-<h2 class="titulo-escola">sobre a Escola</h2>
-<p class="texto-escola"> A escola monteiro lobato, é uma otima escola com bons profesores, que nos ensina e dà atenção quando precisamos.</escola></p>
+    <div>
 
 
+    </div>
+    <h2 class="titulo-escola">sobre a Escola</h2>
+    <p class="texto-escola"> A escola monteiro lobato, é uma otima escola com bons profesores, que nos ensina e dà atenção quando precisamos.</escola></p>
+
+      <div> 
+
+        
+      </div>
 </section>
 
 </body>
