--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 
       <div> 
 
-      <img src="monteiro.jpg"  alt=">"
+      <img class="" src="monteiro.jpg"  alt=">"
       
 </section>
-
-</body>
-</html>
