--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 
       <div> 
 
-      <img class="" src="monteiro.jpg"  alt=">"
+      <img class="imagem-escola" src="monteiro.jpg"  alt=">"
       
 </section>
