--- a/index.html
+++ b/index.html
@@ -29,3 +29,11 @@
       <img class="imagem-escola" src="monteiro.jpg"  alt=">"
       
 </section>
+
+«section class="estudante">
+sh2 class="estudante-titulo">quem somos nos7</h2>
+‹div class="estudante-todos"»
+«div class="estudante-div"»
+zimg class-estudante-imagem.
+spc-"maria
+5peg"alt-us
