--- a/index.html
+++ b/index.html
@@ -30,10 +30,26 @@
       
 </section>
 
-«section class="estudante">
-sh2 class="estudante-titulo">quem somos nos7</h2>
-‹div class="estudante-todos"»
-«div class="estudante-div"»
-zimg class-estudante-imagem.
-spc-"maria
-5peg"alt-us
+<section class="estudante">
+    <h2 class="estudante-titulo">Quem são os estudantes?</h2>
+    <div class="estudante-todos">
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="rafa.jpg" alt="Rafa">
+            <h3>heitor</h3>
+            <img class="estudante-icone" src="INSTAGRAM.PNG" alt="">
+        </div>
+
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="rafa.jpg" alt="Rafa">
+            <h3>brayan</h3>
+            <img class="estudante-icone" src="INSTAGRAM.PNG" alt="">
+        </div>
+
+</section>
+
+
+
+
+
+</body>
+</html>
