--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2 class="estudante-titulo">Quem são os estudantes?</h2>
     <div class="estudante-todos">
         <div class="estudante-div">
-            <img class="estudante-imagem" src="rafa.jpg" alt="Rafa">
+            <img class="estudante-imagem" src="https://github.com/HRuella/2b-pagina-da-turma/blob/main/WhatsApp%20Image%202024-04-11%20at%2011.56.57.jpeg" alt="Rafa">
             <h3>heitor</h3>
             <img class="estudante-icone" src="INSTAGRAM.PNG" alt="">
         </div>
